

[workspace]
members = [
    "cli",
    "cookie",
]


resolver = "2"

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[package]
name = "aaa"
version = "0.1.4"
edition = "2021"
[[bin]]
name = "evina"
path = "cli/src/main.rs"
[package.metadata.release]
tag = false
tag-message = "Release version {new_version}"
push = false
publish = false
push-remote = "origin"


[dependencies]
dotenv_rs = "0.16.1"
reqwest = { version = "0.11.19", features = ["blocking","json"] }
regex = "1.9.3"
clap = { version = "4.3.23", features = ["derive"] }

chrono = "0.4.26"
fake = { version = "2.8.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
boa_engine = "0.16"
md-5 = "0.10.5"
hex = "0.4.3"
serde_json = "1.0.105"
shell-words = "1.1.0"
cookie = { path = "cookie" ,version = "0.1.4" }

[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }