
[workspace]
members = [
    "cli",
    "cookie",
]
resolver = "2"

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
codegen-units = 1
panic = 'abort'
strip = "symbols"

[workspace.metadata.release]
tag = false
tag-message = "Release version {new_version}"
push = false
publish = false
push-remote = "origin"

