[package]
name = "cookie"
version.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv_rs.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
regex.workspace = true
